--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>GlaceYT</title>
     <style>
         body {
-            background-image: url('https://cdn.discordapp.com/attachments/1231904283210022964/1239231820147724288/Multi_Musix_ADV.png?ex=66422c11&is=6640da91&hm=7d06961a3f4f0a0c44122bc8aee51f392d6319d3c70f58d357c5c2e2f330ce36&');
+            background-image: url('https://cdn.discordapp.com/banners/1188552748271161495/5b9febfffdccc4ca41f7e6e22cf04192.webp?size=1024&format=webp&width=0&height=256');
             background-size: cover;
             background-repeat: no-repeat;
             margin: 0;
